# lmscpp

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.org  bit.cpp  bit2.cpp  bit3.cpp  main.cpp  stochastic.cpp  stochastic.hpp  sym.cpp  testall.cpp  utils.cpp  utils.hpp
experiments/: README.org
experiments/mse-evolution/: extra.sh
experiments/skewness-evolution/: experiment.sh  experiments_gaussian.sh  experiments_laplacian.sh
include/lmscpp/: nodevisitor.hpp  nummatrix.hpp  operators.hpp  stochastic.hpp  utils.hpp
lib/: CMakeLists.txt  nummatrix.cpp  stochastic.cpp  utils.cpp
models/: CMakeLists.txt  classical.cpp  common.cpp  common.hpp  fourth-order.cpp  intermediary.cpp  skewness.cpp
samples/: CMakeLists.txt  fourthemp.cpp  skemp.cpp  skemp2.cpp  skempold.cpp
scripts/: CMakeLists.txt  classicaltest.sh  skewness_test.sh
scripts/base_results/: 23baseevol.txt  23basenummatrix.txt  23basesymmatrix.txt
scripts/skewness_results/gauss/: mse_eea.txt  mse_ia.txt  sk_eea.txt  sk_ia.txt
scripts/skewness_results/lap/: mse_eea.txt  mse_ia.txt  sk_eea.txt  sk_ia.txt
tests/: CMakeLists.txt  testall.cpp  testmatrix.cpp  testnode.cpp
utils/: CMakeLists.txt  gauss_emp.cpp
